--- a/package.json
+++ b/package.json
@@ -15,31 +15,22 @@
     "analyze:browser": "BUNDLE_ANALYZE=browser npm run build"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
-    "lucide-react": "^0.545.0",
+    "lenis": "^1.3.11",
     "next": "15.5.4",
-    "next-sitemap": "^4.2.3",
     "react": "19.1.0",
-    "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1",
-    "web-vitals": "^5.1.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
