--- a/mindotek/package.json
+++ b/mindotek/package.json
@@ -19,7 +19,7 @@
     "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
-    "next": "15.5.4",
+    "next": "^16.0.0-canary.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
