--- a/tpm-facility/package.json
+++ b/tpm-facility/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "optimize-images": "node scripts/optimize-all-images.js"
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "sharp": "^0.33.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
